# but-pha-marketing

./: .env  .env.example  .gitignore  ARCHITECTURE.md  COMPLETE_DEV_PROMPT.md  DATA_SCHEMA_AND_API.md  FEATURE_REQUIREMENTS.md  FULL_SPEC_VIETNAMESE.md  HUONG_DAN_CHAY_DU_AN.md  IMPLEMENTATION_TASKS.md  PHASE1_MVP_SETUP.md  PRD_VIETNAMESE.md  QUICK_REFERENCE.md  README.md  TODO.md  UI_SITEMAP.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  tailwind.config.js  tsconfig.json  vercel.json
.continue/: config.yaml
ButPhaMarketing/: .replit  package-lock.json  package.json  pnpm-lock.yaml
app/: HomePageClient.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/app/: main.py  models.py  routes.py  schemas.py  worker.py
apps/backend/app/core/: database.py  queue.py  security.py  settings.py
apps/backend/app/repositories/: content_repository.py  organization_repository.py
apps/backend/app/services/: article_service.py  auth_service.py  content_ai_service.py  job_processor.py  job_service.py  openai_writer.py  publishing_service.py  rank_service.py  seo_service.py  serp_provider.py  serp_service.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_initial.py  0002_auth_workspace_publish.py
apps/backend/tests/: test_auth_service.py  test_content_ai_service.py  test_organization_repository.py  test_publishing_service.py
data/: masothue-nganh-nghe.txt  (+1 more)
(+828 files in other folders)
